Zezex类级共享环境+GameTimer迁入TestEnv：三根杆38.9→13.6s；课石二则：Memory库JVM全局、online timer依赖登录驻留
ZezexTestEnv长出类级共享用法：ClientStartMode(TCP/WEBSOCKET)钩子、rebuildClients/stopClients（provider常驻上报后token秒回，client重建~百ms）、dirty-flag（方法失败markDirty，下一方法stopAll+prepare整体重建，保留失败隔离防级联红）。prepareNewEnvironment签名不变，方法级消费方（TestOnline/TestOnlineSpec/BenchRoleTimer）零改动。

TestRoleTimer迁入：静态env+@AfterAll，4方法共用环境只重建客户端，每方法独立账号(account0..3)防角色复用污染。TestGameTimer迁入：删~120行分叉副本(两套prepare/stopAll/五个RPC助手)，方法1 TCP、方法2 websocket经ClientStartMode，类注释TODO清账。

课石一：DatabaseMemory是JVM级全局静态库（server.xml Memory库DatabaseUrl皆为空串，全JVM共用一份存储）。迁移首跑三处失败实证：①createRole返回0x100000001=Login模块DuplicateRoleName——角色名_trolename全局唯一索引跨方法跨类冲突（旧测试"每方法独立库"是错觉，一直靠各类复用account0+相同角色名静默互相复用角色才没炸）②scheduleOnlineNamed对全局残留的shared在线角色走"not online but transmit"假成功（日志：roleId=10257 OnlineSpec遗留角色）。修复：prepareNewEnvironment开头DatabaseMemory.clear()，把"每环境一个干净的库"显式化。安全前提已核：harness的SM/GCM是纯网络服务不用DatabaseMemory（GCM状态为ConcurrentHashMap），PersistentAtomicLong独立文件存储，Infinite.Simulate有循环clear先例，integrationTest串行无并发库使用者。附带修正GameTimer方法2角色名role0→role1（类内共享库仍需唯一）。

课石二：online timer注册要求角色登录驻留在本server（getLocalLoginVersion非空），双server拓扑下登录按模块分配可能落到另一个server，scheduleOnline走transmit转发且转发后不触发（(0,2,2)首跑test1的ofDelay(1) timer 30s零触发，日志铁证"not online but transmit"）。test2/cron2不受影响：offline timer不依赖登录驻留。故统一拓扑(0,2,1)而非计划的(2,2,2)——test2/cron2原第二个server从未被引用，无损失。transmit路径不触发的根因未深挖（原测试从不走该路径，非本次回归）。

验收：integrationTest全量绿1m53s。对账：TestRoleTimer 20.63→6.15s（m1 0.77/m2 0.10/Cron1 3.33/Cron2 1.96——cron秒边界硬下界完整保留），TestGameTimer 12.97→5.15s（m1 4.77含类首prepare/m2 0.38），TestOnlineSpec 2.25s。